Tue, 15 Jul 2008 15:15:42 -0400 <me@nikosapi.org>
Fix Device traceback when syncing (reported by: FriedBunny)

	* src/gpodder/sync.py: forgot to rename _track_on_device() in 
	Device.episode_on_device()

Tue, 15 Jul 2008 10:21:39 +0200 <thp@perli.net>
gPodder 0.12.0 "Metropolis" released

	* bin/gpodder: gPodder 0.12.0 released
	* data/messages.pot: Updated for the 0.12.0 release
	* data/po/de.po: Updated for the 0.12.0 release
	* data/po/*.po: Updated from messages.pot
	* doc/man/gpodder.1: gPodder 0.12.0 released
	* README: gPodder 0.12.0 released, mention pysqlite2 for Py2.4

Tue, 15 Jul 2008 10:08:16 +0200 <thp@perli.net>
Fix bugs and annoyances when no channels.opml file exists

	* src/gpodder/opml.py: Make sure can save a new channels.opml file
	when no other file exists, and make sure we don't try to parse a file
	that does not exist when opening OPML files

Tue, 15 Jul 2008 10:06:19 +0200 <thp@perli.net>
Do not hide podcast cover and pill pixbuf in podcast list by default

	* src/gpodder/config.py: Change default settings

Tue, 15 Jul 2008 09:54:57 +0200 <thp@perli.net>
Support saving multiple episodes to disk (reported by: O. Emmerson)

	* src/gpodder/gui.py: Make sure that we support saving multiple
	selections for the "Save to disk" context menu item

Mon, 14 Jul 2008 15:18:04 -0400 <me@nikosapi.org>
Always show downloaded episodes (Patch from Justin Forest)

	* src/gpodder/dbsqlite.py: Include downloaded episodes even when they 
	go beyond the episode limit.  e.g., when you have 
	gl.max_episodes_per_feed set to 10, but there are 20 downloaded ones
	already.  With this patch, all 20 episodes are displayed.

Mon, 14 Jul 2008 12:31:15 -0400 <me@nikosapi.org>
Merge patch to fix bug #122 (Day of week Released date not computed correctly)

	* src/gpodder/libpodcasts.py: use rfc822.mktime_tz() to convert
	timestamps from feedparser's _parse_date() function to seconds from
	the epoch (in UTC instead of the local timezone)