@@ -1,3 +1,12 @@
+Sat, 19 Jul 2008 20:37:10 -0400 <me@nikosapi.org>
+Request covers only when necessary (Patch from Justin Forest)
+Closes bug #144 (http://bugs.gpodder.org/show_bug.cgi?id=144)
+
+	* src/gpodder/gui.py: Don't update covers every time updateComboBox
+	is called
+	* src/gpodder/libpodcasts.py: update cover during an update()
+	* src/gpodder/services.py: log when a cover is being requested
+
 Tue, 15 Jul 2008 15:15:42 -0400 <me@nikosapi.org>
 Fix Device traceback when syncing (reported by: FriedBunny)
 
